# email-triage-openenv

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
email_triage_env/: README.md  env.py  models.py  openenv.yaml  tasks.py
email_triage_env/server/: app.py
server/: app.py
